# finance-monorepo

./: .gitignore  AGENTS.md  AGENTS_ANALYST.md  CLAUDE.md  MARKET_OPPORTUNITY_SYSTEM_SPEC.md  Makefile  README.md  finance-monorepo-handoff-v2.md  finance-monorepo-handoff.md  pyproject.toml  render.yaml  wrangler.jsonc
analyst_service/: __init__.py  pyproject.toml
analyst_service/api/: __init__.py  main.py
analyst_service/api/routers/: __init__.py  analysis.py
analyst_service/config/: entry_rules.yaml  fibonacci_config.yaml  signal_thresholds.yaml  signal_weights.yaml
analyst_service/core/: __init__.py  aggregator.py  analysis.py  cache.py  confluence.py  data_fetcher.py  entry_engine.py  fibonacci.py  fundamentals.py  llm_client.py  macro.py  narrator.py  persistence.py  regime.py  sentiment.py  settings.py  signals.py  technicals.py
analyst_service/core/provider_clients/: finance_query.py  stockdata.py
analyst_service/tests/: test_conflict_detection.py  test_entry_api.py  test_entry_engine.py  test_indicators.py  test_llm_client.py  test_main.py  test_market_data_resilience.py  test_narrator.py  test_news_sentiment.py  test_persistence.py  test_price_freshness.py  test_regime_classification.py  test_regime_entry_override.py  test_signal_voting.py
backtesting/: __init__.py  demand_shock_baseline.py  evaluator.py  historical_dataset.py  store.py  walk_forward.py
cloudflare-api/: package.json  wrangler.toml
openapi/: analyst.json  screener.json
postman/: analyst.postman_collection.json  dev.postman_environment.json  local.postman_environment.json  render.postman_environment.json  screener.postman_collection.json
screener_service/: __init__.py  pyproject.toml
screener_service/api/: __init__.py  main.py
screener_service/api/routers/: __init__.py  screen.py  shared_spaces.py
screener_service/config/: demand_shock_config.yaml  filters.yaml  scoring_weights.yaml  trend_rules.yaml  universes.yaml
screener_service/core/: __init__.py  analyst_client.py  buyability.py  demand_shock.py  filters.py  fundamentals_bulk.py  regime.py  scoring.py  screening.py  settings.py  shared_spaces.py  trending.py  universe.py
screener_service/tests/: test_analyst_client.py  test_buyability.py  test_degradation.py  test_demand_shock.py  test_filters_universe.py  test_scoring.py  test_shared_spaces.py  test_trending.py
scripts/: __init__.py  render_smoke.py  warm_cache.py
shared/: pyproject.toml
tests/: test_analyze_integration.py  test_backtesting_evaluator.py  test_confluence.py  test_confluence_api.py  test_demand_shock_baseline.py  test_deployment_cutover.py  test_entry_current_price.py  test_fibonacci.py  test_fundamentals.py  test_historical_dataset.py  test_macro.py  test_sentiment.py  test_walk_forward.py  test_warm_cache.py  (+1 more)
tools/: dump_openapi.py  (+2 more)
(+44 files in other folders)
