[project]
name = "finance-monorepo"
version = "0.1.0"
description = "Market opportunity discovery monorepo."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "screener-service",
    "shared",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.uv.workspace]
members = [
    "shared",
    "screener_service",
]

[tool.uv.sources]
screener-service = { workspace = true }
shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "shared/tests",
    "analyst_service/tests",
    "screener_service/tests",
]
pythonpath = [
    ".",
]
