[project]
name = "analyst-service"
version = "0.1.0"
description = "Phase 1 analyst FastAPI service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "shared",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
