[project]
name = "analyst-service"
version = "0.1.0"
description = "Phase 1 analyst FastAPI service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.1",
    "redis>=5.0.0",
    "shared",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyst_service"]
